--- a/solutions/hw5/Makefile
+++ b/solutions/hw5/Makefile
@@ -1,5 +1,26 @@
-all: targets
+# gcc MV.c -o MV -L/home/pauldj/works/libs/GotoBLAS -lgoto -lg2c -lpthread ; ./MV
+BLAS = $(HOME)/libs/c/blas
+CC = gcc
+DEBUG = -g
+CFLAGS = -Wall $(DEBUG)
+LINK = -L$(BLAS) -lgoto -lg2c -lpthread
 
+all : trsv andrea
 
+run_trsv : trsv
+	./trsv
+
+run_andrea : andrea
+	./andrea
+
+trsv :
+	$(CC) $(CFLAGS) -o trsv trsv.c
+
+andrea :
+	$(CC) $(CFLAGS) -o andrea andrea.c
 
 clean:
+	rm -v trsv trsv.o andrea andrea.o
+
+# andrea:
+# 	$(CC)
