move out print stuff

--- a/solutions/hw5/Makefile
+++ b/solutions/hw5/Makefile
@@ -12,6 +12,9 @@ run_trsv : trsv
 run_andrea : andrea
 	./andrea
 
+utils : utils.o
+	$(CC) $(CFLAGS) -c utils.c
+
 trsv : 
 	$(CC) $(CFLAGS) -o trsv trsv.c
 
@@ -19,7 +22,7 @@ andrea :
 	$(CC) $(CFLAGS) -o andrea andrea.c
 
 clean:
-	rm -v trsv trsv.o andrea andrea.o
+	rm trsv andrea
 
 tar : 
 	tar -cvzf andrea_crotti.tar.gz andrea.c trsv.c
