--- a/solutions/hw5/Makefile
+++ b/solutions/hw5/Makefile
@@ -1,28 +1,26 @@
+# FIXME: this path must be usable also by the professor
 BLAS = $(HOME)/libs/c/blas
 CC = gcc
 DEBUG = -g
 CFLAGS = -Wall $(DEBUG)
 LINK = -L$(BLAS) -lgoto -lg2c -lpthread
+SOURCES = andrea.c trsv.c utils.c
+TARFILE = andrea_crotti.tar.gz
 
-all : trsv andrea
-
-run_trsv : trsv
-	./trsv
-
-run_andrea : andrea
-	./andrea
+all : clean trsv andrea
 
 utils : utils.o
 	$(CC) $(CFLAGS) -c utils.c
 
-trsv : 
-	$(CC) $(CFLAGS) -o trsv trsv.c
+trsv : utils
+	$(CC) $(CFLAGS) $(LINK) -c trsv.c
+	$(CC) -o trsv trsv.o utils.o
 
 andrea :
 	$(CC) $(CFLAGS) -o andrea andrea.c
 
 clean:
-	rm trsv andrea
+	rm -f *.o
 
 tar : 
-	tar -cvzf andrea_crotti.tar.gz andrea.c trsv.c
+	tar -cvzf $(TARFILE) $(SOURCES)
