--- a/solutions/ass5/Makefile
+++ b/solutions/ass5/Makefile
@@ -1,13 +1,15 @@
 # FIXME: this path should be autoconfigurable
 BLAS = $(HOME)/libs/c/blas
 CC = gcc
-OPTIMIZE = -O3 
+OPTIMIZE = -O0
 CFLAGS = -Wall -g #$(OPTIMIZE)
 LINK = -L$(BLAS) -lgoto -lg2c -lpthread
-SOURCES = andrea.c trsm.c utils.c
+SOURCES = andrea.c trsm.c test.c output.m utils.c utils.h Makefile
 TARFILE = andrea_crotti.tar.gz
 
-all : clean trsm andrea
+.PHONY : all
+
+all : clean trsm andrea test
 
 utils : utils.o
 	$(CC) $(CFLAGS) -c utils.c
@@ -19,6 +21,10 @@ trsm : utils
 andrea : utils
 	$(CC) $(CFLAGS) -c andrea.c
 	$(CC) -o andrea andrea.o utils.o
+
+test : utils
+	$(CC) $(CFLAGS) -c test.c
+	$(CC) -o test test.o utils.o
 
 clean:
 	rm -f *.o
