--- a/solutions/ass5/Makefile
+++ b/solutions/ass5/Makefile
@@ -6,17 +6,17 @@ OPTIMIZE = -O0 # disable optimization
 PROFILE = -pg
 CFLAGS = -Wall -g $(OPTIMIZE)
 LINK = -L$(BLAS) -lgoto -lg2c -lm
-SOURCES = andrea.c trsm.c trsv.m test.c output.m utils.c utils.h Makefile
+SOURCES = andrea.c trsv.c trsv.m test.c output.m utils.c utils.h Makefile
 TARFILE = andrea_crotti.tar.gz
 
-all : clean trsm andrea test
+all : clean trsv andrea test
 
 utils : utils.o
 	$(CC) $(CFLAGS) -c utils.c
 
-trsm : utils
-	$(CC) $(CFLAGS) $(LINK) -c trsm.c
-	$(CC) -o trsm trsm.o utils.o
+trsv : utils
+	$(CC) $(CFLAGS) $(LINK) -c trsv.c
+	$(CC) -o trsv trsv.o utils.o
 
 andrea : utils
 	$(CC) $(CFLAGS) -c andrea.c
