start math and generalize precision

--- a/solutions/ass5/Makefile
+++ b/solutions/ass5/Makefile
@@ -22,7 +22,7 @@ andrea : utils
 	$(CC) $(CFLAGS) -c andrea.c
 	$(CC) -o andrea andrea.o utils.o
 
-test : utils
+0test : utils
 	$(CC) $(CFLAGS) -c test.c
 	$(CC) -o test test.o utils.o
 
