--- a/solutions/ass5/Makefile
+++ b/solutions/ass5/Makefile
@@ -1,33 +1,30 @@
-# FIXME: this path should be autoconfigurable
+# Customize those 2 variables is enough
 BLAS = $(HOME)/libs/c/GotoBLAS
 CC = gcc
+
 OPTIMIZE = -O0 # disable optimization
-# Adding some timing / profiling targets??
-CFLAGS = -Wall -g $(OPTIMIZE)
-LINK = -lblas
-SOURCES = andrea.c trsv.c trsv.m test.c output.m graph.m utils.c utils.h Makefile
+DEBUG = -g
+CFLAGS = -Wall $(DEBUG) $(OPTIMIZE)
+
+SOURCES = andrea.c trsv.c trsv.m output.m graph.m utils.c utils.h Makefile
 TARFILE = andrea_crotti.tar.gz
 
-all : clean trsv andrea test
+all : clean trsv andrea
 
 utils : utils.o
 	$(CC) $(CFLAGS) -c utils.c
 
 trsv : utils
 	$(CC) $(CFLAGS) -c trsv.c
-	$(CC) -o trsv -lm -lblas trsv.o utils.o
+	$(CC) -L$(BLAS) -o trsv -lm -lblas trsv.o utils.o
 
 andrea : utils
 	$(CC) $(CFLAGS) -c andrea.c
 	$(CC) -lm -o andrea andrea.o utils.o
 
-test : utils
-	$(CC) $(CFLAGS) -c test.c
-	$(CC) -lm -o test test.o utils.o
-
 clean :
 	rm -f *.o
 
-# In this way it only tar up if everything compiles fine
+# with the all requirment it's only tarred up when everything compiles
 tar : 	all
 	tar -cvzf $(TARFILE) $(SOURCES)
