style issue, plotting and one bug when b > 1 found

--- a/solutions/ass5/Makefile
+++ b/solutions/ass5/Makefile
@@ -11,6 +11,7 @@ TARFILE = andrea_crotti.tar.gz
 
 all : clean trsv andrea
 
+# how is make calling an implicit rule and compiling utils twice?
 utils : utils.o
 	$(CC) $(CFLAGS) -c utils.c
 
